# matchbox-stroke

./: ChangeLog  Makefile.am  configure.ac  matchbox-stroke-fullscreen.desktop  matchbox-stroke.desktop  matchbox-stroke.doap
data/: Makefile.am  strokes.xml
src/: Makefile.am  config-parser.c  matchbox-stroke-action.c  matchbox-stroke-mode.c  matchbox-stroke-recog.c  matchbox-stroke-ui.c  matchbox-stroke.c  matchbox-stroke.h  util-hash.c  util.c
